Changed id to class and fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -11,7 +13,7 @@ body {
     height: 100%;
 }
 
-#wrapper {
+.wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,14 +24,20 @@ body {
     flex-direction: column;
 }
 
-#task-area {
+.task-area {
     display: flex;
 }
 
-.task_container {
+.task-area-header {
+    display: flex;
+    justify-content: center;
+}
+
+.task-container {
     background-color: white;
     margin: 20px;
-    height: 100%;
+    height: 500px;
+    width: 200px;
 }
 
 
